# flask-vite

./: README.md  cookiecutter.json
{{ cookiecutter.__project_slug }}/: .gitignore  README.md  pyproject.toml
{{ cookiecutter.__project_slug }}/flaskr/: __init__.py
{{ cookiecutter.__project_slug }}/flaskr/routes/: main.py
{{ cookiecutter.__project_slug }}/flaskr/templates/: base.html
{{ cookiecutter.__project_slug }}/flaskr/vue/: package.json  tailwind.config.js  vite.config.js
{{ cookiecutter.__project_slug }}/flaskr/vue/src/: main.js
{{ cookiecutter.__project_slug }}/flaskr/vue/src/pages/: Index.vue
